api-td04/echo-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: echo-pod
label:
      app: echo-pod
spec:
  containers:
  - name: echo-container
    image: registry.cluster.wik.cloud/public/echo
    ports:
    - containerPort: 80
